    several other build systems by using different "generators" provided
    by CMake (for instance Ninja, CodeBlocks, Eclipse, KDevelop3, Xcode, etc.).
    See README.CMake.txt for more information.

  - autoconf/configure is still supported by the FLTK team for backwards
    compatibility with older systems that lack CMake support.


  New Features and Extensions

  - (add new items here)
  - The border radius of "rounded" box types can be limited and
    the shadow width of "shadow" box types can be configured (issue #130).
    See Fl::box_border_radius_max() and Fl::box_shadow_width().
  - New classes Fl_SVG_File_Surface and Fl_EPS_File_Surface to save any FLTK
    graphics to SVG or EPS files, respectively.
  - New fl_putenv() is a cross-platform putenv() wrapper (see docs).
  - New Fl::keyboard_screen_scaling(0) call stops recognition of ctrl/+/-/0/
    keystrokes as scaling all windows of a screen.
  - New "Preview" switch added to the GTK native file chooser dialog
    available on the X11 platform. This requires function fl_register_images()
    to have been called.
  - New public variable Fl_Image::register_images_done allows an app. to detect
    whether function fl_register_images() has been called.
  - Fix Fl::add_timeout() under Linux (STR 3516).
  - Fix early timeouts in Fl_Clock seen in some environments (STR 3516).
  - Fl_Printer::begin_job() uses by default the Gnome print dialog on the X11
    platform when the GTK library is available at run-time. That can be turned off
    with Fl::option(OPTION_PRINTER_USES_GTK, false).
  - New member functions Fl_Paged_Device::begin_job() and begin_page()
    replace start_job() and start_page(). The start_... names are maintained
    for API compatibility.
  - New member function Fl_Image::scale(int width, int height) to set
    the drawing size of an image independently from its data size. The
    same function was previously available only for class Fl_Shared_Image