@@ -238,6 +238,16 @@ enum {
   FL_JOIN_BEVEL = 0x3000        ///< join style: line join is tidied
 };
 
+/**
+ Turns ON or OFF antialiased line drawings, if supported by platform.
+ Currently, only the Windows platform allows to change whether line drawings are antialiased.
+ Turning it OFF may accelerate heavy drawing operations.
+ */
+inline void fl_antialias(int state) { fl_graphics_driver->antialias(state); }
+
+/** Returns whether line drawings are currently antialiased */
+inline int fl_antialias() { return fl_graphics_driver->antialias(); }
+
 // rectangles tweaked to exactly fill the pixel rectangle:
 
 /**
