@@ -245,3 +245,15 @@ fl_select_palette(void)
 }
 
 #endif
+
+#if USE_GDIPLUS
+void Fl_GDIplus_Graphics_Driver::color(uchar r, uchar g, uchar b) {
+  Fl_GDI_Graphics_Driver::color(r, g, b);
+  gdiplus_color_.SetFromCOLORREF(fl_RGB());
+}
+
+void Fl_GDIplus_Graphics_Driver::color(Fl_Color i) {
+  Fl_GDI_Graphics_Driver::color(i);
+  gdiplus_color_.SetFromCOLORREF(fl_RGB());
+}
+#endif // USE_GDIPLUS
