@@ -59,3 +59,52 @@ void Fl_GDI_Graphics_Driver::line_style_unscaled(int style, int width, char* das
   DeleteObject(fl_current_xmap->pen);
   fl_current_xmap->pen = newpen;
 }
+
+#if USE_GDIPLUS
+
+void Fl_GDIplus_Graphics_Driver::line_style(int style, int width, char* dashes) {
+  if (!active) return Fl_Scalable_Graphics_Driver::line_style(style, width, dashes);
+  int gdi_width = (width ? width : 1);
+  pen_->SetWidth(Gdiplus::REAL(gdi_width));
+  int standard_dash = style & 0x7;
+  if (standard_dash == FL_DASH )
+    pen_->SetDashStyle(Gdiplus::DashStyleDash);
+  else if (standard_dash == FL_DOT )
+    pen_->SetDashStyle(Gdiplus::DashStyleDot);
+  else if (standard_dash == FL_DASHDOT )
+    pen_->SetDashStyle(Gdiplus::DashStyleDashDot);
+  else if (standard_dash == FL_DASHDOTDOT )
+    pen_->SetDashStyle(Gdiplus::DashStyleDashDotDot);
+  else if(!dashes || !*dashes)
+    pen_->SetDashStyle(Gdiplus::DashStyleSolid);
+  
+  if (style & FL_CAP_ROUND ) {
+    pen_->SetStartCap(Gdiplus::LineCapRound);
+    pen_->SetEndCap(Gdiplus::LineCapRound);
+  } else if (style & FL_CAP_SQUARE ) {
+    pen_->SetStartCap(Gdiplus::LineCapSquare);
+    pen_->SetEndCap(Gdiplus::LineCapSquare);
+  } else {
+    pen_->SetStartCap(Gdiplus::LineCapFlat);
+    pen_->SetEndCap(Gdiplus::LineCapFlat);
+  }
+  
+  if (style & FL_JOIN_MITER ) {
+    pen_->SetLineJoin(Gdiplus::LineJoinMiter);
+  } else if (style & FL_JOIN_BEVEL ) {
+    pen_->SetLineJoin(Gdiplus::LineJoinBevel);
+  } else {
+    pen_->SetLineJoin(Gdiplus::LineJoinRound);
+  }
+  
+  if (dashes && *dashes) {
+    int n = 0; while (dashes[n]) n++;
+    Gdiplus::REAL *gdi_dashes = new Gdiplus::REAL[n];
+    for (int i = 0; i < n; i++) gdi_dashes[i] = dashes[i]/float(gdi_width);
+    pen_->SetDashPattern(gdi_dashes, n);
+    delete[] gdi_dashes;
+  }
+  Fl_Scalable_Graphics_Driver::line_style(style, width, dashes);
+}
+
+#endif
